--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,7 +22,12 @@ main{
                 width: 24%;
             }
     
-            &:nth-of-type(4){.inner{background: #c7c4c4;}}
+            &:nth-of-type(4){ background: #c7c4c4;
+                .inner{
+                    background: url(../img/img1.jpg) no-repeat center/cover;
+                    opacity: 0.5;
+                }
+            }
             &:nth-of-type(7){.inner{background: #efefef;}}
             &:nth-of-type(8){.inner{background: #c7c4c4;}}
             &:nth-of-type(9){.inner{background: #efefef;}}
@@ -47,8 +52,78 @@ main{
                     }
                 }
             }
-            &:nth-of-type(16){width: 48%; height: 400px;}
-            &:nth-of-type(20){width: 48%; height: 400px;}
+            &:nth-of-type(15){
+                .inner{background: url(../img/img2.jpg) no-repeat center/cover;
+                filter: saturate(70%);}}
+            &:nth-of-type(16){
+                width: 48%; height: 400px;position: relative;
+                .inner{
+                    padding: 0;
+                    video{
+                        width: 100%; height: 100%;
+                        object-fit: cover;
+                        filter: grayscale(0.5);
+                    }
+                    a{
+                        color: #fff; font-size: 40px;position: absolute;
+                        top: 50%; left: 50%; transform: translate(-50%,-50%);
+                        z-index: 3;transition: 0.5s;
+                    }
+                    .txt{
+                        color: #fff;
+                        position: absolute; top: 50%; left: 10%;
+                        transform: translateY(-50%);
+                        p{font: bold 20px/1 'arial';}
+                        z-index: 2;
+                        span{font: 18px/1 'arial';}
+                    }
+                    &:hover{
+                        a{font-size: 50px;}
+                    }
+                }
+            }
+            &:nth-of-type(17){.inner{
+                background: url(../img/img4.jpg) no-repeat center/cover;
+            }}
+            &:nth-of-type(18),&:nth-of-type(19){
+                .inner{
+                    p{ color: #b1b0b0;}
+                    span{font: bold 16px/1.5 arial; border-bottom: 1px solid #bbb; color: #111;}
+                }
+            }
+            &:nth-of-type(20){
+                width: 48%; height: 400px;
+                position: relative;
+                .inner{
+                    p{
+                        margin-top: 100px;
+                        font: bold 23px/1.4 'arial';
+                        margin-bottom: 45px;
+                    }
+                    &::after{
+                        content: '18';
+                        width: 150px;
+                        height: 100px;
+                        color: #868686;
+                        font: bold 150px/100px 'arial';
+                        position: absolute;
+                        bottom: 3%;
+                        right: 20%;
+                        opacity: 0.9;
+
+                    }
+                    a{
+                        display: block;
+                        width: 130px;
+                        height: 30px;
+                        border: 1px solid #111;
+                        border-radius: 10px;
+                        font: bold 13px/30px 'arial';
+                        color: #111;
+                        text-align: center;
+                    }
+                }
+            }
 
             .inner{
                 width: 100%; height: 100%;
