--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,10 @@ ul, ol {
 a {
   text-decoration: none; }
 
-body {
-  background: #efefef; }
-
 main {
   width: 100%;
-  padding: 4vw; }
+  padding: 4vw;
+  background: #efefef; }
   main section {
     width: 100%; }
     main section::after {
@@ -22,31 +20,38 @@ main {
       display: block;
       clear: both; }
     main section .item-sizer {
-      width: 12%;
+      width: 12.5%;
       height: 0px;
       opacity: 0; }
     main section .item {
       float: left;
-      width: 12%;
-      height: 150px;
-      padding: 5px; }
-      main section .item:nth-of-type(2), main section .item:nth-of-type(4), main section .item:nth-of-type(6), main section .item:nth-of-type(11), main section .item:nth-of-type(14), main section .item:nth-of-type(15), main section .item:nth-of-type(17), main section .item:nth-of-type(18), main section .item:nth-of-type(19), main section .item:nth-of-type(21) {
-        width: 24%; }
+      width: 12.5%;
+      height: 180px;
+      padding: 5px;
+      box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+      transition: 0.5s; }
+      main section .item:nth-of-type(2), main section .item:nth-of-type(4), main section .item:nth-of-type(6), main section .item:nth-of-type(11), main section .item:nth-of-type(14), main section .item:nth-of-type(15), main section .item:nth-of-type(17), main section .item:nth-of-type(18), main section .item:nth-of-type(19), main section .item:nth-of-type(21), main section .item:nth-of-type(22), main section .item:nth-of-type(23) {
+        width: 25%; }
       main section .item:nth-of-type(4) {
-        background: #c7c4c4; }
+        background: #c7c4c4;
+        position: relative; }
+        main section .item:nth-of-type(4) img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          filter: saturate(60%); }
         main section .item:nth-of-type(4) .inner {
-          background: url(../img/img1.jpg) no-repeat center/cover;
-          opacity: 0.5; }
-      main section .item:nth-of-type(7) .inner {
-        background: #efefef; }
-      main section .item:nth-of-type(8) .inner {
+          position: absolute;
+          top: 0;
+          left: 0; }
+          main section .item:nth-of-type(4) .inner p {
+            color: #fff;
+            z-index: 3; }
+      main section .item:nth-of-type(7), main section .item:nth-of-type(9), main section .item:nth-of-type(12) {
+        background: #efefef;
+        box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.1); }
+      main section .item:nth-of-type(8) .inner, main section .item:nth-of-type(11) .inner {
         background: #c7c4c4; }
-      main section .item:nth-of-type(9) .inner {
-        background: #efefef; }
-      main section .item:nth-of-type(11) .inner {
-        background: #c7c4c4; }
-      main section .item:nth-of-type(12) .inner {
-        background: #efefef; }
       main section .item:nth-of-type(14) .inner {
         border-top: 2px solid #111;
         display: flex;
@@ -65,8 +70,8 @@ main {
         background: url(../img/img2.jpg) no-repeat center/cover;
         filter: saturate(70%); }
       main section .item:nth-of-type(16) {
-        width: 48%;
-        height: 400px;
+        width: 50%;
+        height: 360px;
         position: relative; }
         main section .item:nth-of-type(16) .inner {
           padding: 0; }
@@ -99,15 +104,15 @@ main {
             font-size: 50px; }
       main section .item:nth-of-type(17) .inner {
         background: url(../img/img4.jpg) no-repeat center/cover; }
-      main section .item:nth-of-type(18) .inner p, main section .item:nth-of-type(19) .inner p {
+      main section .item:nth-of-type(18) .inner p, main section .item:nth-of-type(19) .inner p, main section .item:nth-of-type(23) .inner p {
         color: #b1b0b0; }
-      main section .item:nth-of-type(18) .inner span, main section .item:nth-of-type(19) .inner span {
+      main section .item:nth-of-type(18) .inner span, main section .item:nth-of-type(19) .inner span, main section .item:nth-of-type(23) .inner span {
         font: bold 16px/1.5 arial;
         border-bottom: 1px solid #bbb;
         color: #111; }
       main section .item:nth-of-type(20) {
-        width: 48%;
-        height: 400px;
+        width: 50%;
+        height: 360px;
         position: relative; }
         main section .item:nth-of-type(20) .inner p {
           margin-top: 100px;
@@ -134,10 +139,11 @@ main {
           text-align: center; }
       main section .item:nth-of-type(21) .inner {
         background: url(../img/img5.jpg) no-repeat center/cover; }
+      main section .item:nth-of-type(22) .inner {
+        background: url(../img/img7.jpg) no-repeat center/cover; }
       main section .item .inner {
         width: 100%;
         height: 100%;
-        background: #fff;
         padding: 30px; }
         main section .item .inner p {
           font: bold 16px/1.3 'arial';
@@ -145,5 +151,7 @@ main {
           letter-spacing: 1px; }
         main section .item .inner span {
           font: 14px/1 'arial'; }
+      main section .item:hover {
+        transform: scale(0.9); }
 
 /*# sourceMappingURL=style.css.map */
