--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,38 +1,62 @@
 @charset "utf-8";
 @import "reset";
 
+@mixin bg {
+    background: #efefef;
+}
+
 main{
     width: 100%; padding: 4vw;
+    @include bg;
+    
 
     section{
         width: 100%; 
+        
         &::after{
             content: ''; display: block; clear: both;
         }
         .item-sizer{
-            width: 12%;
+            width: 12.5%;
             height: 0px;
             opacity: 0;
         }
         .item{
             float: left;
-            width: 12%; height: 150px;
+            width: 12.5%; height: 180px;
             padding: 5px;
-            &:nth-of-type(2),&:nth-of-type(4),&:nth-of-type(6),&:nth-of-type(11),&:nth-of-type(14),&:nth-of-type(15),&:nth-of-type(17),&:nth-of-type(18),&:nth-of-type(19),&:nth-of-type(21){
-                width: 24%;
+            box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
+            transition: 0.5s;
+            &:nth-of-type(2),&:nth-of-type(4),&:nth-of-type(6),&:nth-of-type(11),&:nth-of-type(14),&:nth-of-type(15),&:nth-of-type(17),&:nth-of-type(18),&:nth-of-type(19),&:nth-of-type(21),&:nth-of-type(22),&:nth-of-type(23){
+                width:25%;
             }
     
             &:nth-of-type(4){ background: #c7c4c4;
+                position: relative;
+                img{
+                    width: 100%; height: 100%;
+                    object-fit: cover;
+                    filter: saturate(60%);
+                } 
                 .inner{
-                    background: url(../img/img1.jpg) no-repeat center/cover;
-                    opacity: 0.5;
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    p{
+                        color: #fff;
+                        z-index: 3;
+                    }
                 }
+                // .inner{
+                //     background: url(../img/img1.jpg) no-repeat center/cover;
+                //     opacity: 0.5;
+                // }
             }
-            &:nth-of-type(7){.inner{background: #efefef;}}
-            &:nth-of-type(8){.inner{background: #c7c4c4;}}
-            &:nth-of-type(9){.inner{background: #efefef;}}
-            &:nth-of-type(11){.inner{background: #c7c4c4;}}
-            &:nth-of-type(12){.inner{background: #efefef;}}
+            &:nth-of-type(7),&:nth-of-type(9),&:nth-of-type(12){
+                @include bg;
+                box-shadow: 0px 0px 1px rgba(0,0,0,0.1);
+            }
+            &:nth-of-type(8),&:nth-of-type(11){.inner{background: #c7c4c4;}}
             &:nth-of-type(14){
                 .inner{
                     border-top: 2px solid #111;
@@ -56,7 +80,7 @@ main{
                 .inner{background: url(../img/img2.jpg) no-repeat center/cover;
                 filter: saturate(70%);}}
             &:nth-of-type(16){
-                width: 48%; height: 400px;position: relative;
+                width: 50%; height: 360px;position: relative;
                 .inner{
                     padding: 0;
                     video{
@@ -85,14 +109,14 @@ main{
             &:nth-of-type(17){.inner{
                 background: url(../img/img4.jpg) no-repeat center/cover;
             }}
-            &:nth-of-type(18),&:nth-of-type(19){
+            &:nth-of-type(18),&:nth-of-type(19),&:nth-of-type(23){
                 .inner{
                     p{ color: #b1b0b0;}
                     span{font: bold 16px/1.5 arial; border-bottom: 1px solid #bbb; color: #111;}
                 }
             }
             &:nth-of-type(20){
-                width: 48%; height: 400px;
+                width: 50%; height: 360px;
                 position: relative;
                 .inner{
                     p{
@@ -127,10 +151,12 @@ main{
             &:nth-of-type(21){
                 .inner{background: url(../img/img5.jpg) no-repeat center/cover;}
             }
+            &:nth-of-type(22){
+                .inner{background: url(../img/img7.jpg) no-repeat center/cover;}
+            }
 
             .inner{
                 width: 100%; height: 100%;
-                background: #fff; 
                 padding: 30px;
     
                 p{
@@ -141,6 +167,9 @@ main{
                 span{
                     font: 14px/1 'arial';
                 }
+            }
+            &:hover{
+                transform: scale(0.9);
             }
     
             
