--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,16 +2,190 @@
 @import "reset";
 
 @mixin bg {
-    background: #efefef;
+    background: #d7dae3;
+}
+@mixin icolor{
+    background: #a5adb9;
 }
 
 main{
     width: 100%; padding: 4vw;
     @include bg;
     
+    #header{
+        width: 100%;
+        position: relative;
+        .inner{
+            margin: 0 auto;
+            position: relative;
+            >h1{
+                // position: absolute;
+                // top: 0;
+                // left: 50%;
+                // transform: translateX(-50%);
+                
+                a{
+                    text-align: center;
+                    font: bold 28px/1 'arial';
+                    color: #464b56;
+                    display: block;
+                    margin-bottom: 40px;
+                }
+                
+            }
+            .util{
+                position: absolute;
+                top: 50%;
+                right: 0%;
+                transform: translateY(-50%);
+                &::after{
+                    content: '';
+                    display: block;
+                    clear: both;
+                }
+
+                li{
+                    display: inline-block;
+
+                    a{
+                        color: #1F2120;
+                        font: bold 15px/35px 'arial';
+                        background: #ffffffb6;
+                        border: 1px solid #ffffffb6;
+                        border-radius: 50px;
+                        display: block;
+                        width: 100px;
+                        height: 35px;
+                        text-align: center;
+                        transition: 0.3s;
+                        
+                        i{
+                            margin-left: 10px;
+                        }
+                        &:hover{
+                            transform: scale(0.9);
+                        }
+                        
+                    }
+
+                    
+                }
+            }
+
+            .btnCall{
+                position:absolute; 
+                top:50%; 
+                left:30px; 
+                transform:translateY(-50%);
+                width:20px; 
+                height:20px; 
+                display:block;  
+                z-index: 11;
+    
+                &::before{
+                    content:''; 
+                    display:block; 
+                    width:100%; 
+                    height:2px; 
+                    background:#000; 
+                    position:absolute; 
+                    top:0; 
+                    left:0; 
+                    transform:rotate(0deg); 
+                    transition:top 0.5s 0s, transform 0.5s 0.5s; 
+                }
+                &::after{
+                    content:''; 
+                    display:block; 
+                    width:100%; 
+                    height:2px; 
+                    background:#000; 
+                    position:absolute; 
+                    bottom:0; 
+                    left:0; 
+                    transform:rotate(0deg); 
+                    transition:bottom 0.5s 0s, transform 0.5s 0.5s; 
+                }
+                span{
+                    display:block; 
+                    width:100%; 
+                    height:2px; 
+                    background:#000; 
+                    text-indent:-9999px; 
+                    position:absolute; 
+                    top:50%; 
+                    margin-top:-1px; 
+                    left:0; 
+                    transition:0.5s; 
+                }
+    
+                &.on{
+                    &::before{ 
+                        transform:rotate(45deg);
+                        top:50%; 
+                        margin-top:-1px; 
+                    }
+                    &::after{ 
+                        transform:rotate(-45deg); 
+                        bottom:50%; 
+                        margin-bottom:-1px; 
+                    }
+                    span{ 
+                        transform:translateX(100%); opacity:0;  
+                    }
+                }
+            }
+    
+            .menuMo{
+                position:fixed; 
+                top:0; 
+                left:-40%; 
+                width:40%; 
+                height:100vh; 
+                background:#aaaaaafb; 
+                transition:0.5s; 
+                padding:35px 30px; 
+                box-sizing:border-box; 
+                z-index:10; 
+    
+                >h1{
+                    padding-bottom:50px; 
+                    padding-left: 20px;
+                    text-align: center;
+                    a{
+                        display:block; 
+                        font:bold 24px/1 'Open Sans'; 
+                        color:#fff; 
+                    }
+                   
+                }
+    
+                #gnbMo{
+                    margin-top: 50px;
+                    li{
+                        a{
+                            display:block; 
+                            width:100%; 
+                            padding:15px 0;  
+                            font: bold 50px/1 'Open Sans'; 
+                            color:#727171; 
+                            text-align:center; 
+                        }
+                    }
+                }
+    
+    
+                &.on{
+                    left:0; 
+                }
+            }
+            
+        }
+    }
 
     section{
         width: 100%; 
+        margin-top: 60px;
         
         &::after{
             content: ''; display: block; clear: both;
@@ -31,7 +205,8 @@ main{
                 width:25%;
             }
     
-            &:nth-of-type(4){ background: #c7c4c4;
+            &:nth-of-type(4){ 
+                @include icolor();
                 position: relative;
                 img{
                     width: 100%; height: 100%;
@@ -55,8 +230,10 @@ main{
             &:nth-of-type(7),&:nth-of-type(9),&:nth-of-type(12){
                 @include bg;
                 box-shadow: 0px 0px 1px rgba(0,0,0,0.1);
+                transform: scale(0.96);
             }
-            &:nth-of-type(8),&:nth-of-type(11){.inner{background: #c7c4c4;}}
+            &:nth-of-type(8),&:nth-of-type(11){.inner{@include icolor();}}
+            &:nth-of-type(13){.inner{background: #ffffffbe;}}
             &:nth-of-type(14){
                 .inner{
                     border-top: 2px solid #111;
