--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,11 +9,14 @@
 }
 
 main{
-    width: 100%; padding: 4vw;
+    width: 100%; 
+    padding: 4vw;
     @include bg;
     
     #header{
         width: 100%;
+        width: 100%;
+        height: 100px;
         position: relative;
         .inner{
             margin: 0 auto;
@@ -185,7 +188,6 @@ main{
 
     section{
         width: 100%; 
-        margin-top: 60px;
         
         &::after{
             content: ''; display: block; clear: both;
@@ -205,7 +207,7 @@ main{
                 width:25%;
             }
     
-            &:nth-of-type(4){ 
+            &:nth-of-type(2),&:nth-of-type(6),&:nth-of-type(4),&:nth-of-type(11),&:nth-of-type(20){ 
                 @include icolor();
                 position: relative;
                 img{
@@ -222,17 +224,13 @@ main{
                         z-index: 3;
                     }
                 }
-                // .inner{
-                //     background: url(../img/img1.jpg) no-repeat center/cover;
-                //     opacity: 0.5;
-                // }
             }
             &:nth-of-type(7),&:nth-of-type(9),&:nth-of-type(12){
                 @include bg;
                 box-shadow: 0px 0px 1px rgba(0,0,0,0.1);
                 transform: scale(0.96);
             }
-            &:nth-of-type(8),&:nth-of-type(11){.inner{@include icolor();}}
+            &:nth-of-type(8){.inner{@include icolor();}}
             &:nth-of-type(13){.inner{background: #ffffffbe;}}
             &:nth-of-type(14){
                 .inner{
@@ -253,39 +251,36 @@ main{
                     }
                 }
             }
-            &:nth-of-type(15){
-                .inner{background: url(../img/img2.jpg) no-repeat center/cover;
-                filter: saturate(70%);}}
             &:nth-of-type(16){
                 width: 50%; height: 360px;position: relative;
-                .inner{
-                    padding: 0;
+                a{
                     video{
                         width: 100%; height: 100%;
                         object-fit: cover;
-                        filter: grayscale(0.5);
                     }
-                    a{
+                    i{
                         color: #fff; font-size: 40px;position: absolute;
                         top: 50%; left: 50%; transform: translate(-50%,-50%);
-                        z-index: 3;transition: 0.5s;
+                        z-index: 2;transition: 0.5s;
                     }
+                    &:hover{
+                        i{font-size: 50px;}
+                    }
+                }
+                
+                .inner{
+
                     .txt{
                         color: #fff;
                         position: absolute; top: 50%; left: 10%;
                         transform: translateY(-50%);
                         p{font: bold 20px/1 'arial';}
-                        z-index: 2;
+                        z-index: 3;
                         span{font: 18px/1 'arial';}
                     }
-                    &:hover{
-                        a{font-size: 50px;}
-                    }
+                    
                 }
             }
-            &:nth-of-type(17){.inner{
-                background: url(../img/img4.jpg) no-repeat center/cover;
-            }}
             &:nth-of-type(18),&:nth-of-type(19),&:nth-of-type(23){
                 .inner{
                     p{ color: #b1b0b0;}
@@ -305,7 +300,7 @@ main{
                         content: '18';
                         width: 150px;
                         height: 100px;
-                        color: #868686;
+                        color: #fff;
                         font: bold 150px/100px 'arial';
                         position: absolute;
                         bottom: 3%;
@@ -325,11 +320,18 @@ main{
                     }
                 }
             }
-            &:nth-of-type(21){
-                .inner{background: url(../img/img5.jpg) no-repeat center/cover;}
-            }
-            &:nth-of-type(22){
-                .inner{background: url(../img/img7.jpg) no-repeat center/cover;}
+            &:nth-of-type(11),&:nth-of-type(15),&:nth-of-type(17),&:nth-of-type(21), &:nth-of-type(22){
+                @include icolor();
+                position: relative;
+                a{
+                    img{
+                        position: relative;
+                        width: 100%; height: 100%;
+                        object-fit: cover;
+                        filter: saturate(60%);
+                    } 
+                }
+                
             }
 
             .inner{
@@ -348,8 +350,37 @@ main{
             &:hover{
                 transform: scale(0.9);
             }
+            a{
+                z-index: 4;
+            }
     
             
         }
     }
+}
+
+.pop{
+    width:100%; height:100vh; 
+    background:rgba(0,0,0,0.8);
+    position:fixed; top:0; left:0;  
+    padding:100px; 
+    z-index: 4;
+
+    img{
+        width:100%; height:100%; 
+        object-fit:contain; 
+    }
+
+    iframe{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    span{
+        font:bold 14px/1 'arial'; color:#fff; 
+        position:absolute; top:55px; right:100px; 
+        cursor:pointer; 
+    }
+
 }
