--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -9,5 +9,7 @@ ul, ol {
 a {
     text-decoration: none;
 }
-
-
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Open+Sans&family=Questrial&display=swap');
+// font-family: 'Open Sans', sans-serif;
+// font-family: 'Josefin Sans', sans-serif;
+// font-family: 'Questrial', sans-serif;
