--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Open+Sans&family=Questrial&display=swap");
 * {
   margin: 0px;
   padding: 0px;
@@ -23,7 +24,7 @@ main {
       position: relative; }
       main #header .inner > h1 a {
         text-align: center;
-        font: bold 28px/1 'arial';
+        font: bold 28px/1 'Josefin Sans';
         color: #464b56;
         display: block;
         margin-bottom: 40px; }
@@ -40,7 +41,7 @@ main {
           display: inline-block; }
           main #header .inner .util li a {
             color: #1F2120;
-            font: bold 15px/35px 'arial';
+            font: bold 15px/35px 'Josefin Sans';
             background: #ffffffb6;
             border: 1px solid #ffffffb6;
             border-radius: 50px;
@@ -123,7 +124,7 @@ main {
           text-align: center; }
           main #header .inner .menuMo > h1 a {
             display: block;
-            font: bold 24px/1 'Open Sans';
+            font: bold 24px/1 'Josefin Sans';
             color: #fff; }
         main #header .inner .menuMo #gnbMo {
           margin-top: 50px; }
@@ -131,7 +132,7 @@ main {
             display: block;
             width: 100%;
             padding: 15px 0;
-            font: bold 50px/1 'Open Sans';
+            font: bold 50px/1 'Josefin Sans';
             color: #727171;
             text-align: center; }
         main #header .inner .menuMo.on {
@@ -211,16 +212,16 @@ main {
           transition: 0.5s; }
         main section .item:nth-of-type(16) a:hover i {
           font-size: 50px; }
-        main section .item:nth-of-type(16) .inner .txt {
+        main section .item:nth-of-type(16) > .inner .txt {
           color: #fff;
           position: absolute;
           top: 50%;
           left: 10%;
           transform: translateY(-50%);
-          z-index: 3; }
-          main section .item:nth-of-type(16) .inner .txt p {
+          z-index: 4; }
+          main section .item:nth-of-type(16) > .inner .txt p {
             font: bold 20px/1 'arial'; }
-          main section .item:nth-of-type(16) .inner .txt span {
+          main section .item:nth-of-type(16) > .inner .txt span {
             font: 18px/1 'arial'; }
       main section .item:nth-of-type(18) .inner p, main section .item:nth-of-type(19) .inner p, main section .item:nth-of-type(23) .inner p {
         color: #b1b0b0; }
@@ -234,14 +235,14 @@ main {
         position: relative; }
         main section .item:nth-of-type(20) .inner p {
           margin-top: 100px;
-          font: bold 23px/1.4 'arial';
+          font: bold 23px/1.4 'Open Sans';
           margin-bottom: 45px; }
         main section .item:nth-of-type(20) .inner::after {
           content: '18';
           width: 150px;
           height: 100px;
           color: #fff;
-          font: bold 150px/100px 'arial';
+          font: bold 150px/100px 'Questrial';
           position: absolute;
           bottom: 3%;
           right: 20%;
@@ -269,11 +270,11 @@ main {
         height: 100%;
         padding: 30px; }
         main section .item .inner p {
-          font: bold 16px/1.3 'arial';
+          font: bold 16px/1.3 'Open Sans';
           margin-bottom: 30px;
           letter-spacing: 1px; }
         main section .item .inner span {
-          font: 14px/1 'arial'; }
+          font: 14px/1 'Questrial'; }
       main section .item:hover {
         transform: scale(0.9); }
       main section .item a {
