--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,8 @@
 @import "reset";
 
 @mixin bg {
-    background: #d7dae3;
+    // background: #d7dae3;
+    background: #eef2fd;
 }
 @mixin icolor{
     background: #a5adb9;
@@ -16,8 +17,7 @@ main{
     #header{
         width: 100%;
         width: 100%;
-        height: 100px;
-        position: relative;
+        height: 130px;
         .inner{
             margin: 0 auto;
             position: relative;
@@ -270,11 +270,10 @@ main{
                         position: absolute; top: 50%; left: 10%;
                         transform: translateY(-50%);
                         z-index: 4;
-                        p{font: bold 20px/1 'arial';}
+                        p{font: bold 20px/1 'Open Sans';}
                         
-                        span{font: 18px/1 'arial';}
-                    }
-                    
+                        span{font: 18px/1 'Open Sans';}
+                    } 
                 }
             }
             &:nth-of-type(18),&:nth-of-type(19),&:nth-of-type(23){
@@ -379,4 +378,186 @@ main{
         cursor:pointer; 
     }
 
+}
+
+@media screen and(max-width:1199px) {
+    main{
+        #header{
+            .inner{
+                .menuMo{
+                    left:-80%; 
+                    width:80%; 
+                }
+            }
+        }
+        section{
+            width: 100%; 
+            .item-sizer{
+                width: 20%;
+                height: 0px;
+                opacity: 0;
+            }
+            .item{
+                width: 20%; height: 180px;
+                
+                &:nth-of-type(2),&:nth-of-type(4),&:nth-of-type(6),&:nth-of-type(11),&:nth-of-type(14),&:nth-of-type(15),&:nth-of-type(17),&:nth-of-type(18),&:nth-of-type(19),&:nth-of-type(21),&:nth-of-type(22),&:nth-of-type(23){
+                    width:40%;
+                }
+
+                &:nth-of-type(15),&:nth-of-type(21){
+                    background: #fff;
+                }
+                &:nth-of-type(16),&:nth-of-type(20){
+                    width: 60%; 
+                }
+                &:nth-of-type(16){
+                    a{
+                        i{color: #fff; font-size: 30px;}
+                        &:hover{i{font-size: 40px;}}
+                    }
+                    
+                    >.inner{
+                        .txt{
+                            p{font: bold 18px/1 'Open Sans';}
+                            
+                            span{font: 16px/1 'Open Sans';}
+                        }
+                        
+                    }
+                }
+                &:nth-of-type(18),&:nth-of-type(19),&:nth-of-type(23){
+                    .inner{
+                        p{ color: #b1b0b0;}
+                        span{font: bold 15px/1.6 arial;}
+                    }
+                }
+
+                &:nth-of-type(20){
+                    .inner{
+                        p{
+                            margin-top: 80px;
+                            font: bold 21px/1.4 'Open Sans';
+                        }
+                        &::after{
+                            width: 90px;
+                            height: 90px;
+                            font: bold 90px/90px 'Questrial';
+                            bottom: 3%;
+                            right: 13%;
+                            opacity: 0.8;
+                        }
+                    }
+                }
+
+                &:nth-of-type(22){
+                    width: 60%;
+                    img{
+                        object-position: top;
+                    }
+                }
+
+                .inner{
+                    padding: 20px;
+
+                    p{
+                        font: bold 14px/1.3 'Open Sans';
+                    }
+                    span{
+                        font: 13px/1 'Questrial';
+                    }
+                }
+                
+            }
+        }
+    }
+    
+}
+
+@media screen and(max-width:559px) {
+    main{
+        #header{
+            .inner{
+                .menuMo{
+                    left:-60%; 
+                    width:60%; 
+
+                    #gnbMo{
+                        li{
+                            a{
+                                font: bold 30px/1 'Josefin Sans'; 
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        section{
+
+            .item-sizer{
+                width: 33.3%;
+            }
+            .item{
+                width: 33.3%; 
+                
+                &:nth-of-type(2),&:nth-of-type(4),&:nth-of-type(6),&:nth-of-type(11),&:nth-of-type(14),&:nth-of-type(15),&:nth-of-type(17),&:nth-of-type(18),&:nth-of-type(19),&:nth-of-type(21),&:nth-of-type(22),&:nth-of-type(23){
+                    width:33.3%;
+                }
+
+                &:nth-of-type(7),&:nth-of-type(9),&:nth-of-type(12),&:nth-of-type(14){
+                    display: none;
+                }
+
+                &:nth-of-type(16),&:nth-of-type(20){
+                    width: 66.6%; 
+                }
+                &:nth-of-type(16){
+                    >.inner{
+                        .txt{
+                            color: #111;
+                            position: absolute; top: 20%; left: 10%;
+                            p{font: bold 16px/1 'Open Sans';}
+                            span{font: 14px/1 'Open Sans';}
+                        } 
+                    }
+                }
+                &:nth-of-type(18),&:nth-of-type(19),&:nth-of-type(23){
+                    .inner{
+                        span{font: bold 13px/1.6 arial;}
+                    }
+                }
+
+                &:nth-of-type(20){
+                    .inner{
+                        p{
+                            font: bold 19px/1.4 'Open Sans';
+                        }
+                        &::after{
+                            font: bold 80px/90px 'Questrial';
+                        }
+                    }
+                }
+
+
+                &:nth-of-type(22){
+                    width: 33.3%;
+                    background: #fff;
+                    img{
+                        object-position: center;
+                    }
+                }
+
+                .inner{
+                    padding: 20px;
+                    p{
+                        font: bold 13px/1.3 'Open Sans';
+                    }
+                    span{
+                        font: 12px/1 'Questrial';
+                    }
+                }
+                
+            }
+        }
+    }
+    
 }
